standard mode bug fix

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9668,7 +9668,7 @@ zip.file("_micCal.txt", micCal);
         return movieTrim;
       }
       else {
-        const stdTrim = await getTrim(250, 4000);
+        const stdTrim = await getTrim(idx, 250, 4000);
         return stdTrim;
       }
       return;
