--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8749,7 +8749,7 @@ zip.file("_micCal.txt", micCal);
           });
       }
       console.info(`****************************************************************************************************`);
-      console.log(`'A1 EVO' optimization completed successfully in ${formatTime(totalTime)} on ${getCurrentDateTime()}.`);
+      console.log(`'A1Evo MJ Custom' optimization completed successfully in ${formatTime(totalTime)} on ${getCurrentDateTime()}.`);
       console.warn("'Allow' download(s) when prompted to save the final optimized .ady file.");
       console.info("When prompted, save the .ady file to your PC and transfer it to your phone/tablet.");
       console.info("Next, import the calibration into the MultEQ Editor App & transfer it to your AV receiver.");
@@ -9095,6 +9095,16 @@ zip.file("_micCal.txt", micCal);
         await postNext('Offset t=0', nChannels, {offset: IROffset, unit: "seconds"});
         mSec[nChannels] -= IROffset;
       }
+      // align final subwoofer median IR to median IR of speakers
+      // note: this ensures min/max delays are negative/positive, otherwise REW crashes
+      const loSPDelay = Math.min(...mSec.slice(1, nSpeakers + 1));
+      const hiSPDelay = Math.max(...mSec.slice(1, nSpeakers + 1));
+      const medianSPDelay = (loSPDelay + hiSPDelay) / 2;
+      await postNext('Offset t=0', nChannels, {offset: -medianSPDelay, unit: "seconds"});
+      for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
+        mSec[i] += medianSPDelay;
+      }
+      // done with groundworks and log
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
